# pepper-viewr

./: Cargo.toml
src/: main.rs
temp/: .gitlab-ci.yml  Cargo.toml  Gst-1.0.gir  SpiceClientGLib-2.0.gir
temp/spice-client-glib/: Cargo.toml  Gir.toml
temp/spice-client-glib/examples/: basic.rs
temp/spice-client-glib/src/: cursor_shape.rs  display_channel.rs  display_monitor_config.rs  display_primary.rs  gl_scanout.rs  lib.rs  main_channel.rs  prelude.rs  protocol.rs  usb_device.rs
temp/spice-client-glib/src/auto/: audio.rs  channel.rs  constants.rs  cursor_channel.rs  cursor_shape.rs  display_channel.rs  enums.rs  file_transfer_task.rs  flags.rs  functions.rs  gl_scanout.rs  inputs_channel.rs  main_channel.rs  mod.rs  playback_channel.rs  port_channel.rs  qmp_port.rs  qmp_status.rs  record_channel.rs  session.rs  smartcard_channel.rs  smartcard_manager.rs  uri.rs  usb_device.rs  usb_device_manager.rs  usbredir_channel.rs  webdav_channel.rs
temp/spice-client-glib/src/subclass/: channel.rs  mod.rs  port_channel.rs
temp/spice-client-glib/sys/: Cargo.toml  Gir.toml
temp/spice-client-glib/sys/src/: lib.rs
temp/spice-client-glib/sys/tests/: abi.rs  constant.c  layout.c  manual.h
