[package]
name = "pepper-viewr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bitflags = "1.0"
once_cell = "1.7.2"
rusb = "0.9.0"
ffi = { package = "spice-client-glib-sys", path = "./sys", version = "0.5.0" }

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"
