[package]
name = "pepper-viewr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
bitflags = "1.0"
once_cell = "1.7.2"
rusb = "0.9.0"
spice-client-glib-sys = "0.4.0"
spice-client-glib = "0.4.0"
#git = "0.19"
