[package]
authors = ["The Gtk-rs Project Developers"]
categories = ["api-bindings"]
description = "Rust bindings for the Spice client library"
edition = "2021"
keywords = ["spice", "gtk-rs", "gnome"]
license = "MIT"
name = "spice-client-glib"
#repository = "https://gitlab.gnome.org/World/Rust/spice-gtk-rs"
repository = "https://gitlab.gnome.org/malureau/spice-gtk-rs"
version = "0.5.0"
[package.metadata.system-deps.spice_client_glib_2_0]
name = "spice-client-glib-2.0"
version = "0.39"
[package.metadata.docs.rs]
features = ["dox"]

[dependencies]
libc = "0.2"
bitflags = "1.0"
once_cell = "1.7.2"
rusb = "0.9.0"
ffi = { package = "spice-client-glib-sys", path = "./sys", version = "0.5.0" }

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gio]
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"
