[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
categories = ["api-bindings"]
description = "Raw C-FFI bindings for the Spice GLib library"
edition = "2021"
keywords = ["spice", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "spice-client-glib-2.0"
name = "spice-client-glib-sys"
repository = "https://gitlab.gnome.org/malureau/spice-gtk-rs"
version = "0.5.0"

[package.metadata.system-deps.spice_client_glib_2_0]
name = "spice-client-glib-2.0"
version = "0.39"

[package.metadata.system-deps.spice_client_glib_2_0.v0_6]
version = "0.6"

[package.metadata.system-deps.spice_client_glib_2_0.v0_7]
version = "0.7"

[package.metadata.system-deps.spice_client_glib_2_0.v0_8]
version = "0.8"

[package.metadata.system-deps.spice_client_glib_2_0.v0_9]
version = "0.9"

[package.metadata.system-deps.spice_client_glib_2_0.v0_11]
version = "0.11"

[package.metadata.system-deps.spice_client_glib_2_0.v0_13]
version = "0.13"

[package.metadata.system-deps.spice_client_glib_2_0.v0_15]
version = "0.15"

[package.metadata.system-deps.spice_client_glib_2_0.v0_17]
version = "0.17"

[package.metadata.system-deps.spice_client_glib_2_0.v0_20]
version = "0.20"

[package.metadata.system-deps.spice_client_glib_2_0.v0_21]
version = "0.21"

[package.metadata.system-deps.spice_client_glib_2_0.v0_22]
version = "0.22"

[package.metadata.system-deps.spice_client_glib_2_0.v0_24]
version = "0.24"

[package.metadata.system-deps.spice_client_glib_2_0.v0_27]
version = "0.27"

[package.metadata.system-deps.spice_client_glib_2_0.v0_28]
version = "0.28"

[package.metadata.system-deps.spice_client_glib_2_0.v0_29]
version = "0.29"

[package.metadata.system-deps.spice_client_glib_2_0.v0_30]
version = "0.30"

[package.metadata.system-deps.spice_client_glib_2_0.v0_31]
version = "0.31"

[package.metadata.system-deps.spice_client_glib_2_0.v0_32]
version = "0.32"

[package.metadata.system-deps.spice_client_glib_2_0.v0_33]
version = "0.33"

[package.metadata.system-deps.spice_client_glib_2_0.v0_34]
version = "0.34"

[package.metadata.system-deps.spice_client_glib_2_0.v0_35]
version = "0.35"

[package.metadata.system-deps.spice_client_glib_2_0.v0_36]
version = "0.36"

[package.metadata.system-deps.spice_client_glib_2_0.v0_37]
version = "0.37"

[package.metadata.system-deps.spice_client_glib_2_0.v0_38]
version = "0.38"

[package.metadata.system-deps.spice_client_glib_2_0.v0_39]
version = "0.39"

[package.metadata.docs.rs]
features = []

[lib]
name = "spice_client_glib_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.19"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v0_6 = []
v0_7 = ["v0_6"]
v0_8 = ["v0_7"]
v0_9 = ["v0_8"]
v0_11 = ["v0_9"]
v0_13 = ["v0_11"]
v0_15 = ["v0_13"]
v0_17 = ["v0_15"]
v0_20 = ["v0_17"]
v0_21 = ["v0_20"]
v0_22 = ["v0_21"]
v0_24 = ["v0_22"]
v0_27 = ["v0_24"]
v0_28 = ["v0_27"]
v0_29 = ["v0_28"]
v0_30 = ["v0_29"]
v0_31 = ["v0_30"]
v0_32 = ["v0_31"]
v0_33 = ["v0_32"]
v0_34 = ["v0_33"]
v0_35 = ["v0_34"]
v0_36 = ["v0_35"]
v0_37 = ["v0_36"]
v0_38 = ["v0_37"]
v0_39 = ["v0_38"]
